# werx

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INDEX.md  INSTALLATION.md  LICENSE.md  LICENSE_NOTE.md  OPENSPEC_AGENTS_TEMPLATE.md  QUICKSTART.md  README.md  TEMPLATE_OVERVIEW.md  build.rs  cspell.json  devenv.nix  flake.nix
.github/prompts/: bug.prompt.md  chore.prompt.md  init.prompt.md  spec-complete.prompt.md  spec.prompt.md  work-on.prompt.md  work.prompt.md
.github/workflows/: _build.yml  _nix-build.yml  ci.yml  release.yml
data/: namedata.json
openspec/: project.md
openspec/changes/add-coding-agents/: proposal.md  tasks.md
openspec/changes/add-forge-init/: proposal.md  tasks.md
openspec/changes/add-preview-release-infra/: design.md  proposal.md  tasks.md
openspec/changes/add-repo-create/: proposal.md  tasks.md
openspec/changes/add-sync-command/: design.md  tasks.md
openspec/changes/check-workspace-status/: design.md  proposal.md  tasks.md
openspec/changes/github-integration/: design.md  proposal.md  (+1 more)
script/: check
script/helpers/: bump-version  mark-release  post-release
shell/: init.bash  init.zsh
src/: branch_naming.rs  cmd.rs  config.rs  directive.rs  github.rs  init.rs  lib.rs  main.rs  namedata.rs  path.rs  repo_meta.rs  repo_spec.rs  reporter.rs  repos.rs  shell.rs  sync.rs  trash.rs  validation.rs  workspace.rs
src/agent/: manage.rs  mod.rs  names.rs  providers.rs  spawn.rs  tmux.rs
tests/: agent_test.rs  init_test.rs  navigation_test.rs  repos_test.rs  sync_test.rs  workspace_test.rs
tests/common/: mod.rs
(+73 files in other folders)
