[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
sha2 = "0.10"
dialoguer = "0.11"
skim = "0.10"
fuzzy-matcher = "0.3"
tempfile = "3.0"
rand = "0.8"
exec = "0.3"
crossterm = "0.29.0"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
