[package]
name = "werx"
version = "0.1.0"
edition = "2024"
description = "Command-line workspace management tool for developers."
license = "MIT"
license-file = "LICENSE.md"
documentation = "https://docs.rs/werx"
homepage = "https://github.com/analogrelay/werx"
repository = "https://github.com/analogrelay/werx"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
sha2 = "0.10"
dialoguer = "0.11"
skim = "0.10"
fuzzy-matcher = "0.3"
tempfile = "3.0"
crossterm = "0.29.0"
rayon = "1.10"
ratatui = "0.29"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
